--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -32,7 +32,7 @@ article>footer {
 }
 
 b {
-  color: lime;
+  color: springgreen;
 }
 
 .logo, .logo:hover {
@@ -52,22 +52,22 @@ body > footer > p {
 
 //hardwire hilite style (dupe)
 :root {
-    --base-color-scalar: #3273dc;       /* Similar to Bulma link-40 */
-    --base-color-array: #485fc7;        /* Bulma link */
-    --base-color-hash: #00d1b2;         /* Bulma link-60 or similar */
+    --base-color-scalar: #2458a2;       /* Darker than #3273dc */
+    --base-color-array: #ed143d;        /* crimson */
+    --base-color-hash: #00a693;         /* Darker cyan-green */
     --base-color-code: #209cee;         /* Bulma info */
-    --base-color-keyword: #00d1b2;      /* Bulma primary */
-    --base-color-operator: #23d160;     /* Bulma success */
-    --base-color-type: #ff3860;         /* Bulma danger-60 */
-    --base-color-routine: #b2dfff;      /* Info-30 like */
-    --base-color-string: #8cd2f0;       /* Info-40 like */
-    --base-color-string-delimiter: #7dd3fc; /* Primary-40 like */
-    --base-color-escape: #4a4a4a;       /* Black-60 like */
-    --base-color-text: #363636;         /* Black */
-    --base-color-comment: #a6f6c2;      /* Success-30 like */
-    --base-color-regex-special: #00c48c; /* Success-60 like */
-    --base-color-regex-literal: #4a4a4a;
-    --base-color-regex-delimiter: #485fc7;
-    --base-color-doc-text: #48c78e;
-    --base-color-doc-markup: #ff3860;
+    --base-color-keyword: #008c7e;      /* Darkened primary cyan */
+    --base-color-operator: #1ca24f;     /* Darker green for contrast */
+    --base-color-type: #d12c4c;         /* Deeper pinkish red */
+    --base-color-routine: #489fdc;      /* Richer blue, not too pale */
+    --base-color-string: #369ec6;       /* Stronger blue-cyan */
+    --base-color-string-delimiter: #1d90d2; /* More contrast than #7dd3fc */
+    --base-color-escape: #2b2b2b;       /* Darkened for visibility */
+    --base-color-text: #2a2a2a;         /* Darker base text */
+    --base-color-comment: #4aa36c;      /* Less pastel, more visible green */
+    --base-color-regex-special: #00996f; /* Balanced mid-green */
+    --base-color-regex-literal: #a52a2a; /* brown */
+    --base-color-regex-delimiter: #cc00cc; /* dark fuchsia */
+    --base-color-doc-text: #2b9e71;     /* Deeper mint green */
+    --base-color-doc-markup: #d02b4c;   /* Matches adjusted danger */
 }
