--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -53,7 +53,7 @@ body > footer > p {
 //hardwire hilite style (dupe)
 :root {
     --base-color-scalar: #2458a2;       /* Darker than #3273dc */
-    --base-color-array: #ed143d;        /* crimson */
+    --base-color-array: #B01030;        /* Darkened crimson */
     --base-color-hash: #00a693;         /* Darker cyan-green */
     --base-color-code: #209cee;         /* Bulma info */
     --base-color-keyword: #008c7e;      /* Darkened primary cyan */
