--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2816,6 +2816,7 @@ body > footer > p {
   font-style: italic;
 }
 
+/* Raku code highlighting */
 :root {
   --base-color-scalar: #2458a2; /* Darker than #3273dc */
   --base-color-array: #B01030; /* Darkened crimson */
@@ -2832,9 +2833,132 @@ body > footer > p {
   --base-color-comment: #4aa36c; /* Less pastel, more visible green */
   --base-color-regex-special: #00996f; /* Balanced mid-green */
   --base-color-regex-literal: #a52a2a; /* brown */
-  --base-color-regex-delimiter: #cc00cc; /* dark fuchsia */
+  --base-color-regex-delimiter: #aa00aa; /* Darkened fuchsia */
   --base-color-doc-text: #2b9e71; /* Deeper mint green */
   --base-color-doc-markup: #d02b4c; /* Matches adjusted danger */
+}
+
+.raku-code {
+  z-index: 1; /* or even 0 */
+  text-align: left;
+  position: relative;
+  min-width: 400px;
+  /* required to match highlights-js css with raku highlighter css */
+}
+.raku-code button.copy-code {
+  float: right;
+  cursor: pointer;
+  opacity: 0;
+  padding: 0 0.25rem 0.25rem 0.25rem;
+  margin-left: 0.25rem;
+  position: relative;
+}
+.raku-code:hover button.copy-code {
+  opacity: 1;
+}
+.raku-code label {
+  float: right;
+  font-size: xx-small;
+  font-style: italic;
+  height: auto;
+  padding-right: 0;
+  margin-top: 1rem;
+}
+.raku-code pre.browser-hl {
+  padding: 7px;
+}
+.raku-code .code-name {
+  padding-top: 0.75rem;
+  padding-left: 1.25rem;
+  font-weight: 500;
+}
+.raku-code pre {
+  display: inline-block;
+  overflow: scroll;
+  width: 100%;
+}
+.raku-code .rakudoc-in-code {
+  padding: 1.25rem 1.5rem;
+}
+.raku-code .section {
+  /* https://github.com/Raku/doc-website/issues/144 */
+  padding: 0rem;
+}
+.raku-code .nohighlights {
+  background: none;
+  color: inherit;
+}
+.raku-code .rainbow-name_scalar {
+  color: var(--base-color-scalar);
+  font-weight: 500;
+}
+.raku-code .rainbow-name_array {
+  color: var(--base-color-array);
+  font-weight: 500;
+}
+.raku-code .rainbow-name_hash {
+  color: var(--base-color-hash);
+  font-weight: 500;
+}
+.raku-code .rainbow-name_code {
+  color: var(--base-color-code);
+  font-weight: 500;
+}
+.raku-code .rainbow-keyword {
+  color: var(--base-color-keyword);
+  font-weight: 500;
+}
+.raku-code .rainbow-operator {
+  color: var(--base-color-operator);
+  font-weight: 500;
+}
+.raku-code .rainbow-type {
+  color: var(--base-color-type);
+  font-weight: 500;
+}
+.raku-code .rainbow-routine {
+  color: var(--base-color-routine);
+  font-weight: 500;
+}
+.raku-code .rainbow-string {
+  color: var(--base-color-string);
+  font-weight: 500;
+}
+.raku-code .rainbow-string_delimiter {
+  color: var(--base-color-string-delimiter);
+  font-weight: 500;
+}
+.raku-code .rainbow-escape {
+  color: var(--base-color-escape);
+  font-weight: 500;
+}
+.raku-code .rainbow-text {
+  color: var(--base-color-text);
+  font-weight: 500;
+}
+.raku-code .rainbow-comment {
+  color: var(--base-color-comment);
+  font-weight: 500;
+}
+.raku-code .rainbow-regex_special {
+  color: var(--base-color-regex-special);
+  font-weight: 500;
+}
+.raku-code .rainbow-regex_literal {
+  color: var(--base-color-regex-literal);
+  font-weight: 500;
+}
+.raku-code .rainbow-regex_delimiter {
+  color: var(--base-color-regex-delimiter);
+  font-weight: 500;
+}
+.raku-code .rainbow-rakudoc_text {
+  color: var(--base-color-doc-text);
+  font-weight: 500;
+}
+.raku-code .rainbow-rakudoc_markup {
+  color: var(--base-color-doc-markup);
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=styles.css.map */
