--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2876,7 +2876,7 @@ body > footer > p {
 }
 .raku-code pre {
   display: inline-block;
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
   margin-bottom: 0px;
 }
