--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -112,7 +112,7 @@ body > footer > p {
     }
     pre {
         display: inline-block;
-        overflow: scroll;
+        overflow: auto;
         width: 100%;
         margin-bottom: 0px;
     }
